[package]
name = "zapp"
description = "Rust Serverless Framework"
version = "0.6.5"
authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["Serverless", "GraphQL", "Async", "PostgreSQL", "Framework"]
homepage = "https://zapp.epics.dev/"
repository = "https://github.com/EpicsDAO/zapp"

[[bin]]
name = "zapp"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.15", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.8.24"
console = "0.15.0"
regex = "1.5.6"
chrono = "0.4"
convert_case = "0.5.0"
spinners = "4.0.0"
