[package]
name = "zapp"
description = "Rust Serverless Framework"
version = "0.7.0"
authors = ["Fumitake Kawasaki <f.kawasaki@elsoul.nl>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["Serverless", "GraphQL", "Async", "PostgreSQL", "Framework"]
homepage = "https://zapp.epics.dev/"
repository = "https://github.com/EpicsDAO/zapp"
rust-version = "1.64.0"

[[bin]]
name = "zapp"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1.15", features = ["derive", "cargo"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
console = "0.15.0"
regex = "1.5.6"
chrono = "0.4"
convert_case = "0.5.0"
spinners = "4.0.0"
quote = "1.0.20"
syn = "1.0.98"
proc-macro2 = { version = "1.0.32", default-features = false }
prettyplease = "0.1.16"
# use sea-orm CLI features directly without running the binary
sea-orm-cli = "0.9.2"

[dev-dependencies]
tempdir = "0.3.7"
walkdir = "2.3.2"
itertools = "0.10.5"
