[package]
name = "zapp-api"
version = "0.1.0"
edition = "2021"
default-run = "zapp-api"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "^0.5.1"
dotenv = "0.15.0"
async-graphql-axum = "^3.0.38"
entity = { path = "entity" }
migration = { path = "migration" }
zapp = "0.1.3"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]