[package]
name = "zapp-api"
version = "0.1.0"
edition = "2021"
default-run = "zapp-api"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "^0.5.1"
dotenv = "0.15.0"
async-graphql-axum = "^3.0.38"
entity = { path = "entity" }
migration = { path = "migration" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "8"
chrono = "0.4.19"
axum-auth = "0.2.0"
fireauth = "0.1.5"

[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]

[dependencies.async-graphql]
version = "^3.0.38"
features = ["chrono"]