[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
entity = { path = "../entity" }
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0.8.0"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]

[dependencies.async-graphql]
version = "^3.0.38"
features = ["chrono"]